# rust-metadata-action

./: .gitignore  LICENSE  README.md  action.yml  index.js  lib.js  package-lock.json  package.json
.github/workflows/: checks.yml  update-dist.yml
tests/: parse-metadata.test.js
tests/fixtures/single-private/: Cargo.toml
tests/fixtures/single-public/: Cargo.toml
tests/fixtures/toolchain-pinned/: Cargo.toml
tests/fixtures/workspace-mixed/: Cargo.toml
tests/fixtures/workspace-mixed/app/: Cargo.toml
tests/fixtures/workspace-mixed/feature-lib/: Cargo.toml
tests/fixtures/workspace-mixed/feature-lib/src/: lib.rs
tests/fixtures/workspace-mixed/private-lib/: Cargo.toml
tests/fixtures/workspace-mixed/private-lib/src/: lib.rs
